--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     ],
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "": "src/",
+            "App\\": "app/"
         }
     },
     "require": {
         "nikic/fast-route": "^1.3",
-        "twig/twig": "^2.5"
+        "twig/twig": "^2.5",
+        "squizlabs/php_codesniffer": "^3.3"
     }
 }
